# osi

./: .gitignore  README.md  pyproject.toml
.codex/environments/: environment.toml
osi_diagnose/: __init__.py  cli.py  model.py
osi_diagnose/checks/: __init__.py  base.py  l1_physical.py  l2_datalink.py  l3_network.py  l4_transport.py  l5_session.py  l6_presentation.py  l7_application.py
osi_diagnose/openai_ai/: __init__.py  summarize.py
osi_diagnose/rendering/: redact.py  report_md.py  terminal.py
tests/: test_parsers.py  test_redaction.py
